--- a/Js.conf
+++ b/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, www.zhihu.com, *.amemv.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co
+hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, www.zhihu.com, *.amemv.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com
 
 ##NobyDa
 
@@ -49,3 +49,6 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 
 # VSCO滤镜VIP
 ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
+
+#闪电下载vip
+^http\:\/\/app\.flashdown365\.com\/ios\/login url script-response-body https://github.com/hexiaogang926/QX_self/raw/master/sdxz.js
