--- a/Js.conf
+++ b/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, www.zhihu.com, *.amemv.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com, api.getmimo.com, book.haitunwallet.com
+hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, www.zhihu.com, *.amemv.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com, api.getmimo.com
 
 ##NobyDa
 
@@ -29,9 +29,6 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 
 # mimo
 ^https:\/\/api\.getmimo\.com\/v1\/subscriptions$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/mimo.vip.js
-
-# 海豚记账 (by @superuv)
-https:\/\/book\.haitunwallet\.com\/app\/vip\/status url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/HTJZ.js
 
 # 彩云天气 Vip
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/ColorWeather.js
