--- a/Js.conf
+++ b/Js.conf
@@ -55,3 +55,7 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 
 #闪电下载vip
 ^http\:\/\/app\.flashdown365\.com\/ios\/login url script-response-body https://github.com/hexiaogang926/QX_self/raw/master/sdxz.js
+
+#Netflix获取评分(by yichahucha)
+^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
+^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
