--- a/Js.conf
+++ b/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, www.zhihu.com, *.amemv.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com, api.getmimo.com
+hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, www.zhihu.com, *.amemv.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com, api.getmimo.com, ios.prod.ftl.netflix.com
 
 ##NobyDa
 
