--- a/Js.conf
+++ b/Js.conf
@@ -18,8 +18,6 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 
 ^https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/onewayticket255/surge_zhihu_people.js
 
-^https://api.zhihu.com/market/header url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Zhihu-ad-market.js
-
 # 抖音去广告去水印 (By Choler)
 ^https://.*\.amemv\.com/aweme/v2/feed/ url request-header ^GET /aweme/v2/feed/(.+) request-header GET /aweme/v1/feed/$1
 ^https:\/\/.*\.amemv\.com\/aweme\/v.*\/(feed|post) url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/Aweme.js
@@ -33,8 +31,8 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ;# 彩云天气 Vip
 ;^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/ColorWeather.js
 
-# 驾校一点通 (by @superuv)
-^https:\/\/vipapi\.jxedt\.com\/vip\/check url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/jxydt.js
+;# 驾校一点通 (by @superuv)
+;^https:\/\/vipapi\.jxedt\.com\/vip\/check url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/jxydt.js
 
 # 什么值得买 去主屏广告 (By @Primovist)
 ^https?:\/\/homepage-api\.smzdm\.com\/home\?ad url script-response-body https://raw.githubusercontent.com/primovist/ScriptsForSurge/master/Scripts/SMZDM.js
