--- a/Js.conf
+++ b/Js.conf
@@ -1,4 +1,9 @@
-hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, www.zhihu.com, *.amemv.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com, api.getmimo.com, ios.prod.ftl.netflix.com
+hostname = boxjs.com, api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, www.zhihu.com, *.amemv.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com, api.getmimo.com, ios.prod.ftl.netflix.com
+
+# Chavy box (多账号Cookie保存切换)
+# 访问:  http://boxjs.com 管理
+^https?://boxjs.com/api url script-request-body https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
+^https?://boxjs.com(/home|/sub|/my|/app|/log|/revert)?($|\/) url script-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
 
 ##NobyDa
 
@@ -10,13 +15,12 @@ hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.wei
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 # 知乎去广告 (By onewayticket255)
-^https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/onewayticket255/surge_zhihu_feed.js
-
-^https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/onewayticket255/surge_zhihu_recommend.js
-
-https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/onewayticket255/surge_zhihu_answer.js
-
-^https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/onewayticket255/surge_zhihu_people.js
+https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
+https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20people.js
+https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js
+https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20recommend.js
+https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20answer.js
+https?://link.zhihu.com/?target= url script-request-header https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20link.js
 
 # 抖音去广告去水印 (By Choler)
 ^https://.*\.amemv\.com/aweme/v2/feed/ url request-header ^GET /aweme/v2/feed/(.+) request-header GET /aweme/v1/feed/$1
