--- a/Js.conf
+++ b/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, api.zhihu.com, www.zhihu.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com, api.getmimo.com, ios.prod.ftl.netflix.com
+hostname = api.m.jd.com, vipapi.jxedt.com, api.interpreter.caiyunai.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, api.zhihu.com, www.zhihu.com, *.snssdk.com,account.wps.cn, biz.caiyunapp.com, *.smzdm.com, api.ithome.com, vsco.co, http://app.flashdown365.com, api.getmimo.com, aw.githubusercontent.com,*.github.io,ios.prod.ftl.netflix.com,trade-acs.m.taobao.com,api.m.jd.com
 
 ##NobyDa
 
@@ -24,11 +24,11 @@ https?://link.zhihu.com/?target= url script-request-header https://raw.githubuse
 ^https?:\/\/api\.ithome\.com\/json\/slide\/index url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js
 ^https?:\/\/api\.ithome\.com\/json\/(newslist|listpage)\/news url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js
 
-#京东历史比价 (by yichahucha)
+#JD-TB 比价
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 
-#淘宝历史价格 (by yichahucha)
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
+
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 
 # VSCO滤镜VIP
